@@ -1,3 +1,9 @@
+Mon Sep 13 22:01:29 1999  George Lebl  <jirka@5z.com>
+
+	* gnome-i18n.c: gnome_i18n_get_language_list now also tries to
+	  figure out aliases by reading in alias files from some standard
+	  locations
+
 1999-09-08  Martin Baulig  <martin@home-of-linux.org>
 
 	* gnome-triggers.h (GnomeTriggerType, _GnomeTriggerType):
